--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   fluttertoast: ^8.1.1
+  staggered_grid_view_flutter: ^0.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
