--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   fluttertoast: ^8.1.1
   staggered_grid_view_flutter: ^0.0.4
+  quickalert: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
