--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sample_flutter">
+
+
    <application
         android:label="sample_flutter"
         android:name="${applicationName}"
@@ -30,5 +32,9 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyA8hyO8Nxy4SeDzVJMkzMfSM35bQakykC4"/>
+
     </application>
 </manifest>
