--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   quickalert: ^1.0.0
   carousel_slider: ^4.1.1
   lottie: ^2.0.0
+  font_awesome_flutter: ^10.2.1
+  google_maps_flutter: ^2.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
