--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   lottie: ^2.0.0
   font_awesome_flutter: ^10.2.1
   google_maps_flutter: ^2.2.2
+  shared_preferences: ^2.0.15
 
 
   # The following adds the Cupertino Icons font to your application.
