--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   font_awesome_flutter: ^10.2.1
   google_maps_flutter: ^2.2.2
   shared_preferences: ^2.0.15
+  sqflite: ^2.2.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  get: ^4.6.5
+  email_validator: ^2.1.17
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -46,8 +51,12 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  build_runner: ^2.2.0
+
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.0
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
