--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,10 @@ dependencies:
   hive_flutter: ^1.1.0
   get: ^4.6.5
   email_validator: ^2.1.17
-
+  firebase_core: ^2.4.0
+  image_picker: ^0.8.6
+  path: ^1.8.2
+  firebase_storage: ^11.0.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
