--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,11 @@ dependencies:
   get: ^4.6.5
   email_validator: ^2.1.17
   firebase_core: ^2.4.0
-  image_picker: ^0.8.6
   path: ^1.8.2
   firebase_storage: ^11.0.9
+  image_picker: ^0.8.6
+  firebase_auth: ^4.2.4
+  permission_handler: ^10.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
